# SCUM-AllowMods

./: .gitignore  BUILD.md  CMakeLists.txt  INSTALL.txt  LICENSE  README.md  SHA256SUMS
src/: dllmain.cpp
ue4ss/: UE4SS-settings.ini
ue4ss/Mods/: mods.txt
